erDiagram
  User ||--o{ Friendship : "has"
  User ||--o{ Group : "owns"
  User ||--o{ GroupMember : "joins"
  Group ||--o{ GroupMember : "contains"
  Group ||--o{ Collection : "groups"
  User ||--o{ Collection : "organizes"
  Collection ||--o{ CollectionParticipant : "has"
  Collection ||--o{ Expense : "has"
  Expense ||--o{ ExpensePayment : "paid by"
  Collection ||--o{ ExpenseCategory : "has"
  ExpenseCategory ||--o{ Expense : "classifies"
  Expense ||--o{ ExpenseItem : "optionally has"
  Expense ||--o{ ExpenseShareRule : "splits"
  ExpenseItem ||--o{ ExpenseShareRule : "splits"
  Collection ||--o{ CalculationVersion : "versions"
  CalculationVersion ||--o{ ParticipantCalculation : "contains"
  CalculationVersion ||--o{ ResponsiblePayerCalculation : "contains"
  CalculationVersion ||--o{ TransferPlan : "creates"
  Collection ||--o{ Dispute : "has"
  TransferPlan ||--o{ ManualPaymentProof : "proves"
  Collection ||--o{ Payment : "later creates"
  User ||--o{ AutoPaymentRule : "owns"
  Collection ||--o{ ShareRuleChangeLog : "logs"
  User ||--o{ AuditLog : "acts"

  User {
    uuid id
    string phone
    string display_name
    string avatar_url
    string status
    string verification_level
    datetime created_at
    datetime updated_at
  }

  Collection {
    uuid id
    string title
    string type
    uuid group_id
    uuid organizer_id
    string currency
    string status
    string payment_mode
    int total_amount_minor
    datetime review_deadline_at
    datetime payment_deadline_at
    datetime created_at
    datetime updated_at
  }

  CollectionParticipant {
    uuid id
    uuid collection_id
    string participant_type
    uuid linked_user_id
    string display_name_snapshot
    uuid payment_responsible_participant_id
    string relationship_hint
    float default_weight
    string status
    int final_share_amount_minor
    string payment_status
  }

  Expense {
    uuid id
    uuid collection_id
    string title
    int amount_minor
    string currency
    string expense_type
    uuid category_id
    string comment
  }

  ExpenseShareRule {
    uuid id
    uuid expense_id
    uuid expense_item_id
    uuid category_id
    uuid participant_id
    string split_mode
    float weight
    int fixed_amount_minor
    float percent
    int cap_amount_minor
    bool excluded
    string reason
  }

  CalculationVersion {
    uuid id
    uuid collection_id
    int version
    string status
    int total_amount_minor
    uuid created_by_user_id
    datetime created_at
  }

